--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,39 @@
 name: Deploy to Contabo
-
 on:
   push:
-    branches: [ main ]
-
+    branches: [main]
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Deploy via SSH
-      uses: appleboy/ssh-action@master
-      with:
-        host: 161.97.115.218
-        username: root
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd /root/websocket-server-barbershop
-          git pull origin main
-          docker-compose build
-          docker-compose down
-          docker-compose up -d
-          echo "✅ Deploy completado"
+      - uses: actions/checkout@v3
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: 161.97.115.218
+          username: root
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd /root/websocket-server-barbershop
+
+            # ✅ Resetear cambios locales
+            git fetch origin main
+            git reset --hard origin/main
+            git clean -fd
+
+            # ✅ Instalar dependencias si hay cambios en package.json
+            npm install
+
+            # ✅ Reconstruir imagen y reiniciar
+            docker-compose down
+            docker-compose build --no-cache
+            docker-compose up -d
+
+            # ✅ Esperar a que esté listo
+            sleep 5
+
+            # ✅ Verificar que esté corriendo
+            docker-compose ps
+            docker-compose logs --tail 20
+
+            echo "✅ Deploy completado exitosamente"
